<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_jetpack"
        android:visibility="visible"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/design_text_black"
        android:hint="@string/string_hing_input_username"
        android:textColorHint="@color/design_text_gray"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/app_margin_larger"
        android:layout_marginRight="@dimen/app_margin_larger"
        android:maxLines="1"
        android:inputType="number"
        android:id="@+id/et_username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/design_text_black"
        android:hint="@string/string_hint_input_password"
        android:textColorHint="@color/design_text_gray"
        android:layout_marginLeft="@dimen/app_margin_larger"
        android:layout_marginRight="@dimen/app_margin_larger"
        android:maxLines="1"
        android:layout_marginTop="@dimen/app_margin_right"
        android:inputType="textPassword"
        android:id="@+id/et_password"
        />

    <Button
        android:layout_marginTop="@dimen/app_margin_larger"
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_margin_larger"
        android:layout_marginRight="@dimen/app_margin_larger"
        android:text="@string/string_login"
        android:textColor="@color/design_text_black"
        />



</androidx.appcompat.widget.LinearLayoutCompat>